--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-586-scholar
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <a href="{% url 'home' %}" class="logo">
               <h1 style="font-size: 20px; text-align: center;">Amar School</h1>
             </a>
             <!-- ***** Logo End ***** -->
