--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,7 +10,7 @@
         <div class="contact-us-content text-white">
             <form method="post" >
                 {% csrf_token %}
-                <h2 class='text-white text-center mt-3'>Teachers Login</h2>
+                <h2 class='text-white text-center mt-3'>Teacher Login</h2>
                 <label for="username" class="form-label">User Name </label>
                 <input type="text" class="form-control" placeholder="User Name" name="username">
                 
